<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_utgent_list"
            android:title="@string/menu_urgentList" />

        <item
            android:id="@+id/nav_all_list"
            android:title="@string/menu_allList" />

        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/menu_categories" />

        <item
            android:id="@+id/nav_edit_list"
            android:title="@string/menu_editList" />

        <item
            android:id="@+id/nav_final_price"
            android:title="@string/menu_finalPrice" />

    </group>
</menu>