<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoppinglist.settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_nameUser_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/usernamesettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/editusername"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/editphoto"
                android:textColor="#000000"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButtonUserUpdate"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/personuserhome_foreground" />

        </LinearLayout>


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="removeimg"
            android:text="@string/removeimg"
            android:textColor="#E91E1E" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="App Settings"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Switch
            android:id="@+id/switchIgnorWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ignorWarnings"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switchQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ignorquestions"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switchProdSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skypQuestion"
            android:textSize="24sp" />

        <Button
            android:id="@+id/clearAllCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="clearAllCat"
            android:text="@string/resetCategories"
            android:textColor="#03A9F4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="clearAllProduct"
            android:text="@string/resetProducts"
            android:textColor="#03A9F4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#E91E1E"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/saveButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>