<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.List.EditUrgenList.edit_urgent_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editurgentlist"
            android:textColor="#0B0707"
            android:textSize="24sp" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_nameCategory_AddNewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/editTextTextSearch_activityEitUrgentList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Searchbyname"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupEditUrgentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_None_editurgentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/radioButton_OrderAtoZ_editurgentlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/atoz" />

            <RadioButton
                android:id="@+id/radioButton_OrderZtoA_editurgentlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ztoa" />

            <RadioButton
                android:id="@+id/radioButton_PriceAsc_editurgentlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Asc" />

            <RadioButton
                android:id="@+id/radioButton_PriceDesc_editurgentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Desc" />

        </RadioGroup>
    </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ListView
            android:id="@+id/listviewediturgenproducts_activityediturgentproducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>