<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.List.AllList.AllList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addNewProduct" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edittex_AllProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Searchbyname"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupAllProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_None_allProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/none"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_OrderAtoZ_allProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/atoz"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_OrderZtoA_allproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/ztoa"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_PriceAsc_allproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Asc"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/radioButton_PriceDesc_allproducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Desc"
                    android:textSize="12sp" />

            </RadioGroup>

        </LinearLayout>

        <ListView
            android:id="@+id/listProducts_fragmentAllList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>